--- a/css-3/index.html
+++ b/css-3/index.html
@@ -7,7 +7,22 @@
 </head>
 <body>
 	CSS3-переходы/transition
-
+		<div class="wrap1">
+  <h1>Наведите на блок</h1>
+  <kbd>transition-duration</kbd>
+  <div class="container">
+    <span>0.5s</span>
+    <div class="box1 box"></div>
+  </div>
+   <div class="container">
+    <span>1s</span>
+    <div class="box2 box"></div>
+  </div>
+   <div class="container">
+    <span>2s</span>
+    <div class="box3 box"></div>
+  </div>
+	</div>
 	
 	CSS3-тень блока
 	<div class="rotate-shadows"></div>
