css transition-timing-function

--- a/css-3/index.html
+++ b/css-3/index.html
@@ -6,7 +6,31 @@
 	<link rel="stylesheet" href="css3.css">
 </head>
 <body>
-	CSS3-переходы/transition
+
+	<div class="main-text">CSS3-переходы/transition</div>
+
+				<div class="wrap2">
+			<a href="#go"><span class="fa fa-power-off"></span>Запустить</a>
+			<a href="#reset"><span class="fa fa-refresh"></span>Назад</a>
+			<div id="go">
+			  <kbd>transition-timing-function</kbd>
+			  <p><kbd>linear</kbd></p>
+			  <p><kbd>ease</kbd></p>
+			  <p><kbd>ease-in</kbd></p>
+			  <p><kbd>ease-out</kbd></p>
+			  <p><kbd>ease-in-out</kbd></p>
+			  <p><kbd>cubic-bezier</kbd></p>
+			</div>
+			</div>
+
+
+
+
+
+
+
+	<div class="transition-property"></div>
+
 		<div class="wrap1">
   <h1>Наведите на блок</h1>
   <kbd>transition-duration</kbd>
@@ -24,17 +48,25 @@
   </div>
 	</div>
 	
-	CSS3-тень блока
+	<div class="main-text">CSS3-тень блока</div>
+
 	<div class="rotate-shadows"></div>
 	<div class="span-shadow-my-test"><div class="wasp">ЭФФЕКТ</div></div>
 	<p class="span-shadow"><span>ЭФФЕКТ 1</span><span>ЭФФЕКТ 2</span><span>ЭФФЕКТ 3</span><span>ЭФФЕКТ 4</span></p>
 	<p class="example-shadow-3"><span></span></p>
 	<p class="example-shadow-1"><span></span></p>
-	CSS3-тень текста
+
+	<div class="main-text">CSS3-тень текста</div>
+
 	<div class="text">Проверка тени</div>
-	CSS3-градиент
+
+	<div class="main-text">CSS3-градиент</div>
+
 	<div class="war"></div>
-	CSS3-рамка
+
+	<div class="main-text">CSS3-рамка</div>
+
 	<div class="wrap"><div class="button"></div></div>
+
 </body>
 </html>
