--- a/css-3/index.html
+++ b/css-3/index.html
@@ -7,11 +7,26 @@
 </head>
 <body>
 
+	<div class="main-text">CSS3-трансформации</div>
+
+			<h1>CSS3 2D Transform examples on <kbd>:hover</kbd></h1>
+			<div class="center">
+				<div class="wrap3"><div class="one"><kbd class="kbd">translateX(20px)</kbd></div></div>
+				<div class="wrap3"><div class="two"><kbd class="kbd">translateY(-20px)</kbd></div></div>
+				<div class="wrap3"><div class="three"><kbd class="kbd">translate(-20px, 20px)</kbd></div></div>
+				<div class="wrap3"><div class="four"><kbd class="kbd">scaleX(-1)</kbd></div></div>
+				<div class="wrap3"><div class="five"><kbd class="kbd">scaleY(1.2)</kbd></div></div>
+				<div class="wrap3"><div class="six"><kbd class="kbd">scale(1.2, 0.5)</kbd></div></div>
+				<div class="wrap3"><div class="seven"><kbd class="kbd">rotate(720deg)</kbd></div></div>
+				<div class="wrap3"><div class="eight"><kbd class="kbd">skewX(20deg)</kbd></div></div>
+				<div class="wrap3"><div class="nine"><kbd class="kbd">skewY(-20deg)</kbd></div></div>
+				<div class="wrap3"><div class="ten"><kbd class="kbd">skew(-20deg, 20deg)</kbd></div></div>
+				<div class="wrap3"><div class="eleven"><kbd class="kbd">matrix(1.2,0,0.5,1.2,50,0)</kbd></div></div>
+			</div>
 	<div class="main-text">CSS3-переходы/transition</div>
 
 				<div class="wrap2">
-			<a href="#go"><span class="fa fa-power-off"></span>Запустить</a>
-			<a href="#reset"><span class="fa fa-refresh"></span>Назад</a>
+			
 			<div id="go">
 			  <kbd>transition-timing-function</kbd>
 			  <p><kbd>linear</kbd></p>
@@ -20,6 +35,8 @@
 			  <p><kbd>ease-out</kbd></p>
 			  <p><kbd>ease-in-out</kbd></p>
 			  <p><kbd>cubic-bezier</kbd></p>
+<a href="#go"><span class="fa fa-power-off"></span>Запустить</a>
+			<a href="#reset"><span class="fa fa-refresh"></span>Назад</a>			  
 			</div>
 			</div>
 
@@ -52,9 +69,9 @@
 
 	<div class="rotate-shadows"></div>
 	<div class="span-shadow-my-test"><div class="wasp">ЭФФЕКТ</div></div>
-	<p class="span-shadow"><span>ЭФФЕКТ 1</span><span>ЭФФЕКТ 2</span><span>ЭФФЕКТ 3</span><span>ЭФФЕКТ 4</span></p>
-	<p class="example-shadow-3"><span></span></p>
-	<p class="example-shadow-1"><span></span></p>
+	<div class="span-shadow"><span>ЭФФЕКТ 1</span><span>ЭФФЕКТ 2</span><span>ЭФФЕКТ 3</span><span>ЭФФЕКТ 4</span></div>
+	<div class="example-shadow-3"><span></span></div>
+	<div class="example-shadow-1"><span></span></div>
 
 	<div class="main-text">CSS3-тень текста</div>
 
