--- a/css-3/index.html
+++ b/css-3/index.html
@@ -7,30 +7,32 @@
 </head>
 <body>
 
+	<div class="main-text">CSS3-анимация</div>
 	<div class="main-text">CSS3-трансформации</div>
-			<div class="container">
-  <div class="wrap4">
-    <div class="element element-1">
-      <kbd>50% 50%</kbd>
-    </div>
-  </div>
-  <div class="wrap4">
-    <div class="element element-2">
-      <kbd>top left</kbd>     
-    </div>
-  </div>
-  <h3><kbd>transform-origin</kbd></h3>
-  <div class="wrap4">
-    <div class="element element-3">
-      <kbd>110% 110%</kbd>      
-    </div>
-  </div>
-  <div class="wrap4">
-    <div class="element element-4">
-      <kbd>50px 50px</kbd>      
-    </div>
-  </div>
-</div>
+
+			<div class="container1">
+			  <div class="wrap4">
+			    <div class="element element-1">
+			      <kbd>50% 50%</kbd>
+			    </div>
+			  </div>
+			  <div class="wrap4">
+			    <div class="element element-2">
+			      <kbd>top left</kbd>     
+			    </div>
+			  </div>
+			  <h3><kbd>transform-origin</kbd></h3>
+			  <div class="wrap4">
+			    <div class="element element-3">
+			      <kbd>110% 110%</kbd>      
+			    </div>
+			  </div>
+			  <div class="wrap4">
+			    <div class="element element-4">
+			      <kbd>50px 50px</kbd>      
+			    </div>
+		 		</div>
+			</div>
 
 			<h1>CSS3 2D Transform examples on <kbd>:hover</kbd></h1>
 			<div class="center">
