--- a/css-3/index.html
+++ b/css-3/index.html
@@ -8,6 +8,34 @@
 <body>
 
 	<div class="main-text">CSS3-анимация</div>
+
+	<div class="back-ground">
+		<div class="loader-container">
+		  <div class="loader1">
+		    <span>0%</span>
+		    <span>10%</span>
+		    <span>20%</span>
+		    <span>30%</span>
+		    <span>40%</span>
+		    <span>50%</span>
+		    <span>60%</span>
+		    <span>70%</span>
+		    <span>80%</span>
+		    <span>90%</span>
+		    <span>100%</span>
+		  </div>
+		</div>
+	</div>
+
+
+	<div class="body">
+		<div class="loader">
+		  <span></span>
+		  <span></span>
+		  <span></span>
+		  <span></span>
+		</div>
+	</div>
 	<div class="main-text">CSS3-трансформации</div>
 
 			<div class="container1">
