--- a/css-3/index.html
+++ b/css-3/index.html
@@ -9,6 +9,10 @@
 
 	<div class="main-text">CSS3-анимация</div>
 
+	<div class="typ-text">
+		<p class="text-typing">Простой пример создания печатающегося текста с помощью CSS3-анимации...</p>
+	</div>
+	
 	<div class="back-ground">
 		<div class="loader-container">
 		  <div class="loader1">
