css3 animation-direction

--- a/css-3/index.html
+++ b/css-3/index.html
@@ -9,10 +9,48 @@
 
 	<div class="main-text">CSS3-анимация</div>
 
+		<div class="container5">
+  <kbd>animation-direction: alternate;</kbd>
+<ul class="alternate">
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+</ul>
+  <kbd>animation-direction: alternate-reverse;</kbd>
+<ul class="alternate-reverse">
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+</ul>
+  <kbd>animation-direction: normal;</kbd>
+<ul class="normal">
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+</ul>
+  <kbd>animation-direction: reverse;</kbd>
+<ul class="reverse">
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+</ul>
+</div>
+
+
+
+
 	<div class="typ-text">
 		<p class="text-typing">Простой пример создания печатающегося текста с помощью CSS3-анимации...</p>
 	</div>
-	
+
 	<div class="back-ground">
 		<div class="loader-container">
 		  <div class="loader1">
