--- a/css-3/index.html
+++ b/css-3/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
 
+	<div class="main-text">CSS3 3D-трансформации</div>
+	
+	<div class="main-text">CSS3 columns</div>
+	<div class="h1">Позиционирование элемента на несколько колонок </div>
+	<div class="test-section">
+		 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas numquam, vel accusantium tenetur, qui consequatur animi dolorum sit provident voluptatem minus corporis dignissimos vitae soluta error cum suscipit! Animi, accusantium.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum at optio culpa eius aut animi ea labore sunt aliquid asperiores laborum rerum nesciunt dolorem, ducimus veritatis iure quo fugiat minus!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores officiis ea, vel quos praesentium veniam ab asperiores odit eos assumenda nesciunt, nulla placeat? Modi facere doloremque impedit. Saepe, dolorum, ea.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis consequatur nostrum veniam cupiditate ipsum corrupti nemo, doloremque fugit repellat, itaque sed unde quae qui optio inventore velit, cum quibusdam voluptatibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis dicta expedita inventore delectus non! Animi reiciendis unde minima voluptatem, voluptate veritatis a. Tempore voluptatum necessitatibus magnam recusandae, minima odit aliquam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati aspernatur esse aliquid fugit sunt necessitatibus corporis iure recusandae ducimus fuga, maiores excepturi sed quod repellat dolore nobis atque. Possimus, praesentium.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde aliquam explicabo iusto neque, voluptatum perferendis! Beatae hic, vitae, doloremque maiores dolorum, adipisci molestias pariatur reprehenderit repellendus eos recusandae eum sapiente!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, totam ut ratione assumenda, voluptate temporibus amet eveniet beatae quidem. Non expedita mollitia magni laboriosam delectus dolorem quo quisquam porro illo! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa magnam commodi rerum nihil sequi aliquam dolorem nam laboriosam cum fuga! Sapiente assumenda nam amet ratione voluptatibus, dolorum, hic iure unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde nam, in enim laboriosam rem inventore modi voluptatem saepe sequi porro deleniti necessitatibus nisi minima aperiam laudantium earum nobis at. Cupiditate.
+	</div> 
 	<div class="main-text">CSS3-анимация</div>
 
 		<div class="container5">
