--- a/css-3/index.html
+++ b/css-3/index.html
@@ -8,7 +8,23 @@
 <body>
 
 	<div class="main-text">CSS3 3D-трансформации</div>
-	
+
+		<div class="div" style="height: 400px; width:660px;text-align:center;margin:20px auto 0">
+<div class="div containerA1 style-flat">
+  <kbd>transform-style: flat;</kbd>
+     <div class="div top">
+      <div class="div bottom"></div>
+    </div>
+  </div>
+  
+  <div class="div containerA1 style-3d">
+    <kbd>transform-style: preserve-3d;</kbd>
+    <div class="div top">
+      <div class="div bottom"></div>
+    </div>
+  </div>
+</div>
+
 	<div class="main-text">CSS3 columns</div>
 	<div class="h1">Позиционирование элемента на несколько колонок </div>
 	<div class="test-section">
