--- a/css-3/index.html
+++ b/css-3/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+	<div class="main-text">CSS3-фильтры</div>
+	
+
+
 	<div class="main-text">CSS3 3D-трансформации</div>
 
 		<div class="div" style="height: 400px; width:660px;text-align:center;margin:20px auto 0">
@@ -103,29 +107,29 @@
 	</div>
 	<div class="main-text">CSS3-трансформации</div>
 
-			<div class="container1">
-			  <div class="wrap4">
-			    <div class="element element-1">
-			      <kbd>50% 50%</kbd>
-			    </div>
-			  </div>
-			  <div class="wrap4">
-			    <div class="element element-2">
-			      <kbd>top left</kbd>     
-			    </div>
-			  </div>
-			  <h3><kbd>transform-origin</kbd></h3>
-			  <div class="wrap4">
-			    <div class="element element-3">
-			      <kbd>110% 110%</kbd>      
-			    </div>
-			  </div>
-			  <div class="wrap4">
-			    <div class="element element-4">
-			      <kbd>50px 50px</kbd>      
-			    </div>
-		 		</div>
-			</div>
+			<div class="container123">
+  <div class="wrap11">
+    <div class="element11 element-1">
+      <kbd>50% 50%</kbd>
+    </div>
+  </div>
+  <div class="wrap11">
+    <div class="element11 element-2">
+      <kbd>top left</kbd>     
+    </div>
+  </div>
+  <h4><kbd>transform-origin</kbd></h4>
+  <div class="wrap11">
+    <div class="element11 element-3">
+      <kbd>110% 110%</kbd>      
+    </div>
+  </div>
+  <div class="wrap11">
+    <div class="element11 element-4">
+      <kbd>50px 50px</kbd>      
+    </div>
+  </div>
+</div>
 
 			<h1>CSS3 2D Transform examples on <kbd>:hover</kbd></h1>
 			<div class="center">
